# chappi-bot

./: .gitattributes  .gitignore  .gitmodules  =3.0.0  README.md  app.py  langgraph.json  poetry.toml  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/app/: main.py
backend/models/: ai_output.py  client_input.py
backend/services/: agent_service.py
data/agent_experiments/: historical.csv  initial_experiment.csv  summary.csv
data/agent_experiments/iterations/: 2_search_and_code_tools_integrated.csv  3_integrate_whisper_audio_transcriber.csv  4_test_workflow.csv  5_integrate_text_processing_tool.csv  6_integrate_text_handler_tool.csv  7_test_agent_performance_against_tasks_with_attached_txt_files.csv  8_integrate_chess_tool.csv
data/temp/: results_web_search.csv
data/temp-data/: abc.txt  temp_json.json  temp_text.txt
notebooks/: final_evaluation.ipynb  final_submition.ipynb  gaia_level_one_questions_validation.ipynb  ml_agent_experimentation.ipynb  tools_integration_and_experimentation.ipynb  tools_poc.ipynb
notebooks/tools_poc/: audio_tool.ipynb  chess_tool.ipynb  template.ipynb  web_search.ipynb
prompts/agent/: format_reponse_message.md  format_reponse_system_message.md  gaia_system_message.md
src/agents/: mvp_agent.py  react.py
src/agents/react/: graph.json  mvp_agent.py
src/tools/: calculator_tool.py  chess_tool.py  code_executor.py  handle_images.py  handle_json.py  handle_text.py  pandas_toolbox.py  post_processing.py  retriever.py  search.py  search_tool.py  temp.py  transcriber.py
src/utils/: gaia_eval.py  gaia_scorer.py
