[tool.poetry]
name = "chappie"
version = "0.1.0"
description = "An AI assistant ready to make your life easier"
authors = ["santiagoal <santiago.ahumada.1@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langchain = ">=0.3.25,<0.4.0"
langchain-openai = ">=0.3.16,<0.4.0"
langchain-core = ">=0.3.59,<0.4.0"
langchain-community = ">=0.3.24,<0.4.0"
langgraph = ">=0.4.3,<0.5.0"
langgraph-prebuilt = ">=0.1.8,<0.2.0"
python-dotenv = ">=1.1.0,<2.0.0"
black = ">=25.1.0,<26.0.0"
pyppeteer = "^2.0.0"
langfuse = "^2.60.4"
langgraph-cli = {extras = ["inmem"], version = "^0.2.10"}
tavily-python = "^0.7.2"
openai-whisper = "^20240930"
huggingface-hub = "^0.32.4"
ffmpeg = "^1.4"
llvmlite = ">=0.40"
pandas = "^2.3.0"
datasets = "^3.6.0"
numpy = ">=1.26.0,<2.2.0"
tensorflow = ">=2.19.0,<3.0.0"
opencv-python = "^4.11.0.86"
pyarrow = "^20.0.0"
svglib = "^1.5.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
numba = ">=0.58"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"