[tool.poetry]
name = "chappie"
version = "0.1.0"
description = "An AI assistant ready to make your life easier"
authors = ["santiagoal <santiago.ahumada.1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "tools", from = "src" },
    { include = "agents", from = "src" }
]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.13"
langchain = "0.3.25"
langchain-openai = ">=0.3.16,<0.4.0"
langchain-core = ">=0.3.59,<0.4.0"
langchain-community = ">=0.3.24,<0.4.0"
langgraph = ">=0.4.3,<0.5.0"
langgraph-prebuilt = ">=0.1.8,<0.2.0"
python-dotenv = ">=1.1.0,<2.0.0"
black = ">=25.1.0,<26.0.0"
langfuse = "^2.60.4"
langgraph-cli = {extras = ["inmem"], version = "^0.2.10"}
tavily-python = "^0.7.2"
openai-whisper = "^20240930"
huggingface-hub = "^0.32.4"
ffmpeg = "^1.4"
llvmlite = ">=0.40"
pandas = "^2.3.0"
datasets = "^3.6.0"
numpy = ">=1.26.0,<2.2.0"
opencv-python = "^4.11.0.86"
pyarrow = "^20.0.0"
svglib = "^1.5.1"
tensor = "^0.3.6"
tensorflow = "2.17.1"
keras = "3.2.1"
matplotlib = "<3.10"
python-chess = "^1.999"
cairosvg = "^2.8.2"
board_to_fen = { path = "external/chess-modules/board_to_fen" }
easyocr = "^1.7.2"
pytubefix = "^9.2.0"
ultralytics = "^8.3.158"
playwright = "^1.53.0"
beautifulsoup4 = "^4.13.4"
aiofiles = "^24.1.0"
pdfplumber = "^0.11.7"
markdownify = "^1.1.0"
pdf2image = "^1.17.0"
unstructured-inference = "^1.0.5"
pi-heif = "^0.22.0"
pdfminer-six = "^20250506"
unstructured = "^0.18.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
numba = ">=0.58"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
